# Blog-Backend

./: flaskblog.py  forms.py  nohup.out  pyproject.toml
flaskblog/: __init__.py  forms.py  models.py  routes.py
flaskblog/templates/: layout.html
instance/: site.db
templates/: home.html  layout.html  login.html  register.html
